--- a/style.css
+++ b/style.css
@@ -63,7 +63,9 @@ nav li a
     text-decoration: none;
 }*/
 
-
+body {
+  position: relative;
+}
 header {
   display: flex;
   flex-direction: row;
@@ -102,6 +104,7 @@ section img
 
 section
 {
+  flex-direction: row;
   float: right;
   width: 400px;
   height: 300px;
@@ -128,12 +131,20 @@ section a
 display: flex;
 justify-content: center;
 }
-
+.middleSection{
+  display:flex;
+  flex-direction:row;
+  justify-content: center;
+  max-width: 100%;
+}
 
 footer {
   display: flex;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
   flex-direction: row;
-  justify-content: space-between;
   background-color: grey;
   margin-top: 20px;
   padding: 20px;
